--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -22,6 +22,7 @@ h6 {
 
 h1 {
   font-size: 96px;
+  line-height: 1.5;
 }
 
 h2 {
@@ -77,6 +78,13 @@ p {
 }
 
 @media (max-width: 960px) {
+  h1 {
+    font-size: 60px;
+  }
+
+  h2 {
+    font-size: 44px;
+  }
   .project-description {
     padding: 0;
     text-align: center;
