--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -79,11 +79,16 @@ p {
 
 @media (max-width: 960px) {
   h1 {
-    font-size: 60px;
+    font-size: 44px;
+    line-height: 1.5;
   }
 
   h2 {
     font-size: 44px;
+  }
+
+  .hero {
+    padding: 80px 20px;
   }
   .project-description {
     padding: 0;
