--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -77,6 +77,18 @@ p {
   padding: 120px 60px;
 }
 
+footer a {
+  color: var(--primary-color);
+  text-decoration: none;
+  font-size: 28px;
+  margin: 0 20px;
+}
+
+footer a :hover {
+  color: var(--secondary-color);
+  cursor: pointer;
+}
+
 @media (max-width: 960px) {
   h1 {
     font-size: 44px;
