--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -78,7 +78,7 @@ p {
 }
 
 footer a {
-  color: var(--primary-color);
+  color: var(--branding-color);
   text-decoration: none;
   font-size: 28px;
   margin: 0 20px;
