--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -9,6 +9,30 @@ body {
   font-family: var(--default-font-family);
 }
 
+nav {
+  padding: 20px 0;
+}
+
+nav ul {
+  padding: 0;
+  margin: 0;
+}
+
+nav li {
+  display: inline;
+  list-style: none;
+  line-height: 42px;
+  margin-left: 15px;
+}
+nav a {
+  text-decoration: none;
+  color: #190204;
+}
+
+nav a :hover {
+  color: var(--branding-color);
+}
+
 h1,
 h2,
 h3,
@@ -82,7 +106,6 @@ footer a {
   text-decoration: none;
   font-size: 28px;
   margin: 0 20px;
-  display: block;
 }
 
 footer a :hover {
