--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -106,7 +106,7 @@ footer a {
   text-decoration: none;
   font-size: 28px;
   margin: 0 20px;
-  display: inline center;
+  display: inline;
 }
 
 footer a :hover {
