--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -7,6 +7,7 @@
 
 body {
   font-family: var(--default-font-family);
+  text-align: center;
 }
 
 nav {
@@ -117,6 +118,19 @@ footer a :hover {
 footer p {
   color: #6c63ff;
   text-align: center;
+}
+
+.project-description {
+  padding: 30px;
+  line-height: 1.5;
+}
+
+.navbar-primary {
+  background-color: var(--secondary-color);
+}
+.navbar-brand {
+  font-size: 30px;
+  font-weight: 300;
 }
 
 @media (max-width: 960px) {
