--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,6 +1,6 @@
 :root {
-  --branding-color: #6c63ff;
-  --secondary-color: #f9f7fe;
+  --branding-color: #a9f79f;
+  --secondary-color: #eff8ee;
   --heading-font-family: "Playfair Display", serif;
   --default-font-family: "Poppins", sans-serif;
 }
