--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -153,7 +153,7 @@ footer p {
 @media (max-width: 960px) {
   h1 {
     font-size: 44px;
-    line-height: 1.5;
+    line-height: 56px;
   }
 
   h2 {
@@ -163,6 +163,12 @@ footer p {
   .hero {
     padding: 80px 20px;
   }
+
+  .about-section {
+    text-align: center;
+    padding: 0;
+  }
+
   .project-description {
     padding: 0;
     text-align: center;
