--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -27,7 +27,12 @@ nav li {
 }
 nav a {
   text-decoration: none;
-  color: #190204;
+  color: var(--branding-color);
+  transition: all 100ms ease-in-out;
+}
+
+nav li.active a {
+  color: var(--branding-color);
 }
 
 nav a :hover {
