--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -31,8 +31,7 @@ nav a {
   transition: all 100ms ease-in-out;
 }
 
-nav a :hover,
-nav li.active a {
+nav a :hover {
   color: var(--branding-color);
 }
 
@@ -141,7 +140,7 @@ footer a {
 }
 
 footer a :hover {
-  color: var(--secondary-color);
+  color: #bae4c9;
   cursor: pointer;
 }
 
