--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -55,6 +55,10 @@ h2 {
   font-size: 64px;
 }
 
+h4 {
+  font-size: 48px;
+}
+
 p {
   font-weight: normal;
   font-size: 16px;
@@ -135,8 +139,18 @@ footer a {
   color: var(--branding-color);
   text-decoration: none;
   font-size: 28px;
-  margin: 0 20px;
+  margin: 60px 0;
   display: inline;
+}
+
+footer .contact-box {
+  background: var(--secondary-color);
+  padding: 30px 120px;
+  border-radius: 10px;
+}
+
+footer .contact-box p {
+  margin: 0;
 }
 
 footer a :hover {
