--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -186,6 +186,10 @@ footer p {
     font-size: 44px;
   }
 
+  h4 {
+    font-size: 26px;
+  }
+
   .hero {
     padding: 80px 20px;
   }
@@ -198,5 +202,9 @@ footer p {
   .project-description {
     padding: 0;
     text-align: center;
+  }
+
+  footer .contact-box {
+    padding: 30px;
   }
 }
